<resources>
    <string name="app_name">Verboven_Bui2</string>
    <string name="addBtn"> Add Reading </string>
    <string name="viewAllBtn"> View All Readings </string>
    <string name="viewMonthBtn"> View Monthly Stat By User</string>
    <string name="submitBtn"> Submit Reading </string>
    <string name="cancelBtn"> Cancel</string>
    <string name="deleteBtn"> Delete</string>
    <string name="updateBtn"> Update Reading</string>
    <string name="okBtn"> OK</string>
    <string name="nameHint"> Enter Your Name Here</string>
    <string name="systolicHint"> Enter Systolic Rate Here</string>
    <string name="diastolicHint"> Enter Diastolic Rate Here</string>
    <string name="systolicLbl"> Systolic Rate:</string>
    <string name="diastolicLbl"> Diastolic Rate:</string>
    <string name="nameLbl"> User Name:</string>
    <string name="dateLbl"> Date:</string>
    <string name="timeLbl"> Time:</string>
    <string name="conditionLbl"> Condition:</string>
    <string name="conditionNotif"> Based on your reading, your condition is:</string>
    <string name="severeCallDoctorStr"> This is severe. You need to see a doctor</string>
    <string name="badCallDoctorStr"> This can be bad. You should see a doctor</string>

</resources>
