<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:activityContext=".MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/addBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addBtn"
        android:onClick="onAddReading">
    </Button>

    <Button
        android:id="@+id/viewMonthlyBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewMonthBtn"
        android:onClick="onViewMonthlyReading"
        android:layout_below="@id/addBtn">
    </Button>

    <Button
        android:id="@+id/viewAllReadingsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewAllBtn"
        android:onClick="onViewAllReadings"
        android:layout_below="@id/viewMonthlyBtn">
    </Button>

</RelativeLayout>