<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_column="4"
    android:layout_row="4">

    <TextView
        android:id="@+id/nameLbl"
        style="@style/labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginTop="@dimen/defaultMargin"
        android:text="@string/nameLbl" />

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        android:layout_column="1"
        android:layout_row="0"
        android:layout_columnSpan="2" />

    <TextView
        android:id="@+id/systolicLbl"
        style="@style/labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_marginTop="@dimen/defaultMargin"
        android:text="@string/systolicLbl"/>

    <TextView
        android:id="@+id/systolicTV"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/defaultMargin"
        android:layout_column="1"
        android:layout_row="1"/>

    <TextView
        android:id="@+id/diastolicLbl"
        style="@style/labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="2"
        android:layout_marginTop="@dimen/defaultMargin"
        android:text="@string/diastolicLbl" />

    <TextView
        android:id="@+id/diastolicTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="0"
        android:layout_marginTop="@dimen/defaultMargin">

    </TextView>

    <TextView
        android:id="@+id/dateLbl"
        style="@style/labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        android:text="@string/dateLbl"
        android:layout_column="0"
        android:layout_row="2"/>

    <TextView
        android:id="@+id/dateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_marginTop="@dimen/defaultMargin"/>

    <TextView
        android:id="@+id/timeLbl"
        style="@style/labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        android:text="@string/timeLbl"
        android:layout_column="2"
        android:layout_row="1"/>

    <TextView
        android:id="@+id/timeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="1"
        android:layout_marginTop="@dimen/defaultMargin" />

    <TextView
        android:id="@+id/conditionLbl"
        style="@style/labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        android:text="@string/conditionLbl"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="3"/>

    <TextView
        android:id="@+id/conditionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:layout_columnSpan="2"
        android:layout_marginTop="@dimen/defaultMargin" />

</GridLayout>