<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nameLbl"
        style="@style/editDialogLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/nameLbl"/>

    <TextView
        android:id="@+id/nameTV"
        style="@style/editDialogLabels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"

        android:layout_marginStart="33dp"
        android:layout_toEndOf="@+id/nameLbl" />

    <TextView
        android:id="@+id/systolicLbl"
        style="@style/editDialogLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/labelMargin"
        android:text="@string/systolicLbl"
        android:layout_below="@+id/nameLbl"/>

    <TextView
        android:id="@+id/systolicTV"
        style="@style/editDialogLabels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_below="@+id/nameTV"
        android:layout_marginStart="46dp"
        android:layout_toEndOf="@+id/systolicLbl">

    </TextView>

    <TextView
        android:id="@+id/diastolicLbl"
        style="@style/editDialogLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/labelMargin"
        android:text="@string/diastolicLbl"
        android:layout_below="@+id/systolicLbl"/>

    <TextView
        android:id="@+id/diastolicTV"
        style="@style/editDialogLabels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_below="@+id/systolicTV"
        android:layout_marginStart="22dp"
        android:layout_toEndOf="@id/diastolicLbl"
        android:breakStrategy="high_quality">

    </TextView>
</RelativeLayout>